# ChangeLog for dev-util/statsvn
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Nov 2006; Miroslav Šulc <miroslav.sulc@startnet.cz> ChangeLog:
  Ebuild created
