@@ -1,12 +1,12 @@
 DIST statsvn-0.1.3-source.zip 4886863 RMD160 d3850647ec45d24a6b2932b9168bde979d173407 SHA1 f36651ea382edf9950a7e1ca7c896aca1570dfab SHA256 53ff6271f7b818dc1a43e178096fd833de675209712d7d1b7929a7b2a8297769
-EBUILD statsvn-0.1.3.ebuild 1155 RMD160 c6edcf38215005c214ff76bfd57c7307f2aad371 SHA1 eff4898aa1f4831abfb5fc3efba09bdbf59abe4d SHA256 710e82548df5f5137aa3182f897bb3051c96ce8d180ea7db9db7f3f2d4bd38a9
-MD5 11c67615230caefa2d8d27e9c40c87f2 statsvn-0.1.3.ebuild 1155
-RMD160 c6edcf38215005c214ff76bfd57c7307f2aad371 statsvn-0.1.3.ebuild 1155
-SHA256 710e82548df5f5137aa3182f897bb3051c96ce8d180ea7db9db7f3f2d4bd38a9 statsvn-0.1.3.ebuild 1155
-MISC ChangeLog 204 RMD160 c917f41c81eb72a400676252cb079edee661642e SHA1 ced9133da22def5ab4a5deabff01e16dcd9976be SHA256 f10b5ceb9c0600ac3c6569471c808468cfcfd2db549bd0071bfc24c2c989cd2d
-MD5 f308bd97e3cc40313d4ec01de7c1bd76 ChangeLog 204
-RMD160 c917f41c81eb72a400676252cb079edee661642e ChangeLog 204
-SHA256 f10b5ceb9c0600ac3c6569471c808468cfcfd2db549bd0071bfc24c2c989cd2d ChangeLog 204
+EBUILD statsvn-0.1.3.ebuild 1318 RMD160 4eaa89179c17513a3c269e0cfdbdda97b74a1ef1 SHA1 10893e118d9224f3dd0510e89e98b4ac50388ef7 SHA256 83981544aae8e8d7ad939d76c8fca22e4a065ecbf99488cedb4518362b8668b3
+MD5 5c7098340107aa66f9658d2b86729bf8 statsvn-0.1.3.ebuild 1318
+RMD160 4eaa89179c17513a3c269e0cfdbdda97b74a1ef1 statsvn-0.1.3.ebuild 1318
+SHA256 83981544aae8e8d7ad939d76c8fca22e4a065ecbf99488cedb4518362b8668b3 statsvn-0.1.3.ebuild 1318
+MISC ChangeLog 288 RMD160 6d121e9c3cc553e45705863e1c6830cf270c83a8 SHA1 a6648f866b84d4002eac302b359a7ed5635b8798 SHA256 d134d630ca323edc086cf9ad63d0a710ec2eb6ef26403e34aae26a8271e1fb2c
+MD5 dbeb7896a95190bb65a9048173e434a6 ChangeLog 288
+RMD160 6d121e9c3cc553e45705863e1c6830cf270c83a8 ChangeLog 288
+SHA256 d134d630ca323edc086cf9ad63d0a710ec2eb6ef26403e34aae26a8271e1fb2c ChangeLog 288
 MD5 f26f4bf90cbc066366fb80dbe3e15534 files/digest-statsvn-0.1.3 256
 RMD160 5e7dec0b4a01829f8bb708d2e8731140047d7303 files/digest-statsvn-0.1.3 256
 SHA256 5499ff831ac7bf13cbd22f5668d9a819078eb71cbf0944de34af1cd38bdd6bf5 files/digest-statsvn-0.1.3 256
