@@ -3,5 +3,8 @@
 # $Header: $
 
   23 Nov 2006; Miroslav Šulc <miroslav.sulc@startnet.cz> ChangeLog:
+  Added tests
+
+  23 Nov 2006; Miroslav Šulc <miroslav.sulc@startnet.cz> ChangeLog:
   Ebuild created
 
